# backend

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: crawler.py
app/agents/crawler/: agent.py
app/agents/discovery/: agent.py  prompt.py
app/agents/extraction/: agent.py  prompt.py
app/api/: dependencies.py
app/domain/branding/: ports.py
app/domain/research/: models.py  ports.py
app/domain/workflows/: events.py  models.py  ports.py
app/infrastructure/persistence/mongodb/: client.py  workflow_repo.py
app/infrastructure/persistence/postgresql/: client.py  workflow_repo.py
app/models/: requests.py  responses.py
app/modules/branding/: extractor.py  models.py
app/modules/crawl/: events.py  models.py  review.py  selector.py  validate.py
app/modules/research/: models.py  researcher.py
app/modules/skills/: generator.py
app/routers/: crawl.py  jobs.py  query.py  stream.py
app/services/: branding.py  crawl.py  crawl_stream.py  job_manager.py  llm.py  mongodb.py  prompt.py  query.py  query_stream.py  validate.py  workflows_repo.py
scripts/: save_cookies.py
