[project]
name = "backend"
version = "0.1.0"
description = "Browser-use agent that extracts onboarding workflows and brand tokens from any URL"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.0",
    "fastapi>=0.134.0",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.9",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.41.0",
]

